--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
 
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/style.css"/>
 
   <title>Document</title>
 </head>
@@ -48,6 +48,11 @@
           </li>
         </ul>
       </address>
+      <button type="button" class="main-nav-button">
+        <svg class="main-nav-close" width="32" height="22">
+          <use href="./images/icons.svg#icon-burger"></use>
+        </svg>
+      </button>
     </div>
   </header>
   <main>
@@ -56,7 +61,7 @@
       <div class="container">
         <h1 class="hero-title">
           Effective Solutions <br />
-          Your Business
+          For Your Business
         </h1>
         <button data-modal-open type="button" class="hero-btn">Order Service</button>
       </div>
@@ -184,7 +189,7 @@
 
     <!-- section-2 -->
 
-    <section class="section no-padding">
+    <!-- <section class="section no-padding">
       <div class="container">
         <h2 class="section-title">What are we doing</h2>
         <ul class="work-list list">
@@ -199,11 +204,11 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- section-3 -->
 
-    <section class="section team">
+    <!-- <section class="section team">
       <div class="container">
         <h2 class="section-title">Our Team</h2>
         <ul class="worker list">
@@ -357,11 +362,11 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- Customers -->
 
-    <section class="section">
+    <!-- <section class="section">
       <div class="container">
         <h2 class="section-title">Customers</h2>
         <ul class="customers list">
@@ -409,12 +414,12 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </main>
   <!-- footer -->
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container-footer container">
       <div class="logo">
         <a href="./index.html" class="footer-logo link">Web<span class="logo-footer">Studio</span></a>
@@ -468,7 +473,7 @@
       </form>
     </div>
     </div>
-  </footer>
+  </footer> -->
   <script src="./js/modal.js"></script>
 </body>
 
