--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
     <!-- section-2 -->
 
-    <!-- <section class="section no-padding">
+    <section class="section section-work no-padding">
       <div class="container">
         <h2 class="section-title">What are we doing</h2>
         <ul class="work-list list">
@@ -204,18 +204,18 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!-- section-3 -->
 
-    <!-- <section class="section team">
+    <section class="section team">
       <div class="container">
         <h2 class="section-title">Our Team</h2>
         <ul class="worker list">
           <li class="worker-list">
             <img src="./images/img4.jpg" alt="Mark Guerrero" width="264" height="260" />
             <div class="worker-item-description">
-              <h3 class="title">Mark Guerrero</h3>
+              <h3 class="team-title">Mark Guerrero</h3>
               <p class="description">Product Designer</p>
               <ul class="worker-soc-list list">
                 <li class="worker-soc-item">
@@ -252,7 +252,7 @@
           <li class="worker-list">
             <img src="./images/img5.jpg" alt="Tom Ford" width="264" height="260" />
             <div class="worker-item-description">
-              <h3 class="title">Tom Ford</h3>
+              <h3 class="team-title">Tom Ford</h3>
               <p class="description">Frontend Developer</p>
               <ul class="worker-soc-list list">
                 <li class="worker-soc-item">
@@ -289,7 +289,7 @@
           <li class="worker-list">
             <img src="./images/img6.jpg" alt="Camila Garcia" width="264" height="260" />
             <div class="worker-item-description">
-              <h3 class="title">Camila Garcia</h3>
+              <h3 class="team-title">Camila Garcia</h3>
               <p class="description">Marketing</p>
               <ul class="worker-soc-list list">
                 <li class="worker-soc-item">
@@ -326,7 +326,7 @@
           <li class="worker-list">
             <img src="./images/img7.jpg" alt="Daniel Wilson" width="264" height="260" />
             <div class="worker-item-description">
-              <h3 class="title">Daniel Wilson</h3>
+              <h3 class="team-title">Daniel Wilson</h3>
               <p class="description">UI Designer</p>
               <ul class="worker-soc-list list">
                 <li class="worker-soc-item">
@@ -362,11 +362,11 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!-- Customers -->
 
-    <!-- <section class="section">
+    <section class="section">
       <div class="container">
         <h2 class="section-title">Customers</h2>
         <ul class="customers list">
@@ -414,12 +414,12 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
   </main>
   <!-- footer -->
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container-footer container">
       <div class="logo">
         <a href="./index.html" class="footer-logo link">Web<span class="logo-footer">Studio</span></a>
@@ -473,7 +473,7 @@
       </form>
     </div>
     </div>
-  </footer> -->
+  </footer>
   <script src="./js/modal.js"></script>
 </body>
 
