--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
           <ul class="work-list list">
             <li class="work-list-item">
               <img
+                srcset="./images/img 1-2x.jpeg"
                 src="./images/img1.jpg"
                 alt="analitics"
                 width="360"
@@ -328,6 +329,7 @@
             </li>
             <li class="work-list-item">
               <img
+              srcset="./images/img 2-2x.jpeg"
                 src="./images/img2.jpg"
                 alt="massangers"
                 width="360"
@@ -336,6 +338,7 @@
             </li>
             <li class="work-list-item">
               <img
+                srcset="./images/img 3-2x.jpeg"
                 src="./images/img3.jpg"
                 alt="recomended for you"
                 width="360"
@@ -354,6 +357,7 @@
           <ul class="worker list">
             <li class="worker-list">
               <img
+                srcset="./images/img4-2x.jpeg"
                 src="./images/img4.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -396,6 +400,7 @@
             </li>
             <li class="worker-list">
               <img
+              srcset="./images/img5-2x.png"
                 src="./images/img5.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -438,6 +443,7 @@
             </li>
             <li class="worker-list">
               <img
+                srcset="./images/img6-2x.jpeg"
                 src="./images/img6.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -480,6 +486,7 @@
             </li>
             <li class="worker-list">
               <img
+                srcset="./images/img7-2x.jpeg"
                 src="./images/img7.jpg"
                 alt="Daniel Wilson"
                 width="264"
